[project]
name = "reflection-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=25.11.0",
    "flask>=3.1.2",
    "isort>=7.0.0",
    "langchain>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.4",
    "panel>=1.8.3",
    "python-dotenv>=1.2.1",
]
